src/test/resources/purescript_examples/manual/failing/RedefinedFixity.purs.psi
FILE
  PureASTWrapperElement(Program)
    PureASTWrapperElement(Module)
      PsiElement(module)('module')
      PsiElement(whitespace)(' ')
      PureASTWrapperElement(ModuleName)
        PureASTWrapperElement(Qualified)
          PsiElement(proper name)('RedefinedFixity')
          PsiElement(whitespace)(' ')
      PsiElement(where)('where')
      PsiElement(whitespace)('\n\n  ')
      PureASTWrapperElement(ValueDeclaration)
        PsiElement(()('(')
        PureASTWrapperElement(Identifier)
          PsiElement(operator)('!?')
        PsiElement())(')')
        PsiElement(whitespace)(' ')
        PureASTWrapperElement(Binder)
          PureASTWrapperElement(VarBinder)
            PsiElement(identifier)('x')
            PsiElement(whitespace)(' ')
        PureASTWrapperElement(Binder)
          PureASTWrapperElement(VarBinder)
            PsiElement(identifier)('y')
            PsiElement(whitespace)(' ')
        PsiElement(=)('=')
        PsiElement(whitespace)(' ')
        PureASTWrapperElement(Value)
          PureASTWrapperElement(PrefixValue)
            PureASTWrapperElement(Var)
              PureASTWrapperElement(Qualified)
                PsiElement(identifier)('x')
                PsiElement(whitespace)(' ')
          PureASTWrapperElement(IdentInfix)
            PureASTWrapperElement(Qualified)
              PsiElement(operator)('+')
              PsiElement(whitespace)(' ')
          PureASTWrapperElement(Value)
            PureASTWrapperElement(PrefixValue)
              PureASTWrapperElement(Var)
                PureASTWrapperElement(Qualified)
                  PsiElement(identifier)('y')
                  PsiElement(whitespace)('\n  \n  ')
      PureASTWrapperElement(FixityDeclaration)
        PureASTWrapperElement(Fixity)
          PsiElement(infix)('infix')
          PsiElement(whitespace)(' ')
          PsiElement(natural)('2')
          PsiElement(whitespace)(' ')
        PsiElement(operator)('!?')
        PsiElement(whitespace)('\n  ')
      PureASTWrapperElement(FixityDeclaration)
        PureASTWrapperElement(Fixity)
          PsiElement(infix)('infix')
          PsiElement(whitespace)(' ')
          PsiElement(natural)('2')
          PsiElement(whitespace)(' ')
        PsiElement(operator)('!?')
        PsiElement(whitespace)('\n')
